fixed spacing issue

--- a/styles/console.css
+++ b/styles/console.css
@@ -1,9 +1,4 @@
 #console-screen {
-    position: absolute;
-    top: 30px;
-    left: 0;
-    right: 0;
-    bottom: 0;
     overflow: hidden;
 }
 
