--- a/styles/editor.css
+++ b/styles/editor.css
@@ -1,7 +1,6 @@
 #editor {
     overflow: hidden;
     position: absolute;
-    top: 30px;
-    bottom: 0;
+    height: 100%;
     width: 100%;
 }
